<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/modern_dashboard"
            android:textSize="21sp"
            android:gravity="center"
            android:textColor="@android:color/white"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="2">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/ladoo"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/ladoo"
                        android:src="@mipmap/ic_launcher"
                        android:textSize="18sp"
                        android:scaleType="centerCrop"
                        android:gravity="bottom|center_horizontal"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/ladoo"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="bottom|center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/chikki"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/chikki"
                        android:src="@mipmap/ic_launcher"
                        android:textSize="18sp"
                        android:gravity="bottom|center_horizontal"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/chikki"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="bottom|center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/rasgulla"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/rasgulla"
                        android:src="@mipmap/ic_launcher"
                        android:textSize="18sp"
                        android:scaleType="centerCrop"
                        android:gravity="bottom|center_horizontal"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/rasgulla"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="bottom|center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/cham_cham"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/cham_cham"
                        android:src="@mipmap/ic_launcher"
                        android:textSize="18sp"
                        android:gravity="bottom|center_horizontal"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/cham_cham"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="bottom|center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/barfi"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/barfi"
                        android:src="@mipmap/ic_launcher"
                        android:textSize="18sp"
                        android:scaleType="centerCrop"
                        android:gravity="bottom|center_horizontal"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/barfi"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="bottom|center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/gulab_jamun"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/gulab_jamun"
                        android:src="@mipmap/ic_launcher"
                        android:textSize="18sp"
                        android:gravity="bottom|center_horizontal"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/gulab_jamun"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="bottom|center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/mysore_pak"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/mysore_pak"
                        android:src="@mipmap/ic_launcher"
                        android:textSize="18sp"
                        android:scaleType="centerCrop"
                        android:gravity="bottom|center_horizontal"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/mysore_pak"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="bottom|center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="12dp"
                android:layout_margin="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/mawa_peda"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/mawa_peda"
                        android:src="@mipmap/ic_launcher"
                        android:textSize="18sp"
                        android:gravity="bottom|center_horizontal"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:text="@string/mawa_peda"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_gravity="bottom|center_horizontal"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

    </ScrollView>

</LinearLayout>